# tommys-comfy-screen-capturer

./: .gitignore  README.md  eslint.config.js  index.html  package.json  vite.config.js
src/: App.jsx  App.module.less  Overlay.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/windows_utils/: capture.rs
src/components/: WidthHeightField.jsx
