[package]
name = "tommys-comfy-screen-capturer"
version = "0.1.0"
description = "tommys-comfy-screen-capturer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_creen_capturer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = { git = "https://github.com/nashaofu/xcap", features = ["image"] }
base64 = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.60.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_Devices_Display",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_Xps",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_Storage_FileSystem",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi_Common",
] }
sysinfo = "0.33.1"
scopeguard = "1.2.0"
tracing = "0.1.41"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard", branch = "v2" }

